force-app/main/default/objects/Customer_Historical_Discount__c/Customer_Historical_Discount__c.object-meta.xml
<CustomObject>
    <description>Stores historical discount for an account per SKU / MG1. Weighted average at the NGN level.</description>
    <label>Customer Historical Discount</label>
    <nameField>
        <displayFormat>CHD-{0000000}</displayFormat>
        <label>Customer Historical Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Historical Discount</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>