force-app/main/default/objects/Customer_Historical_Discount__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>A unique key used to clearly identify the customer within the SAP system</description>
    <inlineHelpText>This field shows an ERP ID of the Customer or Account</inlineHelpText>
    <label>ERP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>