force-app/main/default/objects/Customer_Historical_Discount__c/fields/Fiscal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_End_Date__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>The end date of the 12-month measurement period for customer historical discount.</description>
    <inlineHelpText>The end date of the 12-month measurement period for customer historical discount.</inlineHelpText>
    <label>Fiscal End Date</label>
    <type>Date</type>
</CustomField>