force-app/main/default/objects/Customer_Historical_Discount__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Frequency of latest data on a defined 12 month period of customer historical discount. Can be either last fiscal year, last 4 fiscal quarters, or last 12 fiscal months.</description>
    <inlineHelpText>Frequency of latest data on a defined 12 month period of customer historical discount. Can be either last fiscal year, last 4 fiscal quarters, or last 12 fiscal months.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>