force-app/main/default/objects/Customer_Historical_Discount__c/fields/Valid_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_From_Date__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>The start of validation period for historical discount.</description>
    <inlineHelpText>The start of validation period for historical discount.</inlineHelpText>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>