force-app/main/default/objects/Customer_Historical_Discount__c/recordTypes/Test.recordType-meta.xml
<RecordType>
    <fullName>Test</fullName>
    <active>true</active>
    <label>Test</label>
</RecordType>