force-app/main/default/objects/Customer_Historical_Discount__c/validationRules/RestrictCreateEditAccess.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCreateEditAccess</fullName>
    <active>true</active>
    <description>To Restrict Create/Edit Access for Users who do not have the SL_Edit To Customer Historical Spend And Discount permission set</description>
    <errorConditionFormula>AND(NOT($Permission.SL_Edit_To_Customer_Historical_Spend_And_Discount ),NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c))</errorConditionFormula>
    <errorMessage>You are not authorized to edit this record.</errorMessage>
</ValidationRule>